--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.1.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "bson-objectid": "^1.3.0",
     "dropzone": "^5.7.0",
     "mdbreact": "^4.25.4",
     "react": "^16.13.0",
