--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bson-objectid": "^1.3.0",
     "dropzone": "^5.7.0",
     "mdbreact": "^4.25.4",
+    "moment": "^2.25.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
