--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "bson-objectid": "^1.3.0",
     "dropzone": "^5.7.0",
     "mdbreact": "^4.25.4",
-    "moment": "^2.25.1",
+    "moment": "^2.25.3",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-dropzone": "^10.2.2",
+    "react-moment": "^0.9.7",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "semantic-ui-css": "^2.4.1",
