--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^4.4.1",
     "bson-objectid": "^1.3.0",
     "dropzone": "^5.7.0",
+    "faker": "^4.1.0",
+    "lodash": "^4.17.15",
     "mdbreact": "^4.25.4",
     "moment": "^2.25.3",
     "react": "^16.13.0",
